force-app/main/default/objects/Dev_Ticket__c/Dev_Ticket__c.object-meta.xml
<CustomObject>
    <label>開発チケット</label>
    <nameField>
        <label>要約</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>開発チケット</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>