force-app/main/default/objects/Dev_Ticket__c/fields/cntOperationFlow__c.field-meta.xml
<CustomField>
    <fullName>cntOperationFlow__c</fullName>
    <label>運用フロー</label>
    <summaryForeignKey>Relation_OptFlow2Dev__c.DevTicket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>