force-app/main/default/objects/Dev_Ticket__c/fields/created_howto__c.field-meta.xml
<CustomField>
    <fullName>created_howto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手順書・動画の作成</label>
    <type>Checkbox</type>
</CustomField>