force-app/main/default/objects/Dev_Ticket__c/fields/created_releasenote__c.field-meta.xml
<CustomField>
    <fullName>created_releasenote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リリースノートの作成</label>
    <type>Checkbox</type>
</CustomField>