force-app/main/default/objects/Dev_Ticket__c/fields/designDiagram__c.field-meta.xml
<CustomField>
    <fullName>designDiagram__c</fullName>
    <label>設計チャート</label>
    <summaryForeignKey>Relation_Dev2DesignDiagram__c.Dev_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>