force-app/main/default/objects/Dev_Ticket__c/fields/functionRequirement__c.field-meta.xml
<CustomField>
    <fullName>functionRequirement__c</fullName>
    <label>機能要件</label>
    <summaryForeignKey>Relation_Requirements2Dev__c.Dev_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>