force-app/main/default/objects/Dev_Ticket__c/fields/logNo__c.field-meta.xml
<CustomField>
    <fullName>logNo__c</fullName>
    <displayFormat>Dev-{00000}</displayFormat>
    <label>発番</label>
    <type>AutoNumber</type>
</CustomField>