force-app/main/default/objects/Dev_Ticket__c/fields/objectRequirement__c.field-meta.xml
<CustomField>
    <fullName>objectRequirement__c</fullName>
    <label>オブジェクト定義</label>
    <summaryForeignKey>Relation_Dev2ObjectReq__c.Dev_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>