force-app/main/default/objects/Dev_Ticket__c/fields/onbord__c.field-meta.xml
<CustomField>
    <fullName>onbord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>onbord</label>
    <type>Checkbox</type>
</CustomField>