force-app/main/default/objects/Dev_Ticket__c/fields/permissionRequirement__c.field-meta.xml
<CustomField>
    <fullName>permissionRequirement__c</fullName>
    <label>権限定義</label>
    <summaryForeignKey>Relation_Dev2PermissionReq__c.Dev_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>