force-app/main/default/objects/Dev_Ticket__c/fields/reportRequirement__c.field-meta.xml
<CustomField>
    <fullName>reportRequirement__c</fullName>
    <label>レポート定義</label>
    <summaryForeignKey>Relation_Dev2ReportReq__c.Dev_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>