force-app/main/default/objects/Dev_Ticket__c/fields/testCase__c.field-meta.xml
<CustomField>
    <fullName>testCase__c</fullName>
    <label>テストケース</label>
    <summaryForeignKey>Relation_Dev2Testcase__c.Dev_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>