force-app/main/default/objects/Dev_Ticket__c/fields/testSuite__c.field-meta.xml
<CustomField>
    <fullName>testSuite__c</fullName>
    <label>テストスイート</label>
    <summaryForeignKey>Relation_Dev2suite__c.DevTicket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>