force-app/main/default/objects/Dev_Ticket__c/listViews/bord.listView-meta.xml
<ListView>
    <fullName>bord</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>onbord__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>onbord</label>
</ListView>